[package]
name = "rps-oracle"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Random Oracle for Rock-Paper-Scissors on Fluent"

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[profile.dev]
panic = "abort"

[profile.dev.package."*"]
opt-level = 3